--- a/package.json
+++ b/package.json
@@ -6,27 +6,36 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server",
-    "start-dev": "webpack -w & nodemon server.js",
+    "start-dev": "webpack -w & nodemon server/index.js",
     "start-webpack": "webpack -w"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/polyfill": "^7.10.4",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-logger": "0.0.3",
     "morgan": "^1.10.0",
     "path": "^0.12.7",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^6.3.3"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.10.4",
     "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.1.1",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   }
